--- a/style.css
+++ b/style.css
@@ -126,7 +126,7 @@ body {
   color: black;
 }
 .redColour1{
-  background-color: #ff0000;
+  background-color: #ed1c24;
   
   
 }
@@ -147,7 +147,6 @@ body {
 }
 .text{
   text-align: center;
-  martop:10px;
 }
 .schedule{
   margin-top:20px
